<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@font/happymonkey_regular">

    <TextView
        android:id="@+id/descripcioJoc7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="30sp"
        android:text="@string/joc7_1"
        android:textSize="@dimen/midaNormal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        android:paddingHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/opcio1joc7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/opcio1joc7"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcioJoc7"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/opcio2joc7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        android:textSize="18sp"
        android:text="@string/opcio2joc7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcio1joc7" />

    <TextView
        android:id="@+id/opcio3joc7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/opcio3joc7"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcio2joc7" />

    <TextView
        android:id="@+id/opcio4joc7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/opcio4joc7"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcio3joc7" />

    <TextView
        android:id="@+id/opcio5joc7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/opcio5joc7"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcio4joc7" />

    <TextView
        android:id="@+id/opcio6joc7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/opcio6joc7"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcio5joc7" />

    <TextView
        android:id="@+id/opcio7joc7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:text="@string/opcio7joc7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcio6joc7" />

    <TextView
        android:id="@+id/opcio8joc7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:text="@string/opcio8joc7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcio7joc7" />

    <TextView
        android:id="@+id/opcio9joc7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:text="@string/opcio9joc7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcio8joc7" />


    <Button
        android:id="@+id/siguiente7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/happymonkey_regular"
        />

</androidx.constraintlayout.widget.ConstraintLayout>