<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text2joc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/joc2_1"
        android:textSize="@dimen/midaNormal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        android:paddingHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fallosJoc10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/happymonkey_regular"
        android:text="@string/fallos"
        android:textAlignment="center"
        android:textSize="@dimen/midaPetita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2joc2" />

    <RadioGroup
        android:id="@+id/radioJoc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fallosJoc10">

        <RadioButton
            android:id="@+id/opcio1joc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/happymonkey_regular"
            android:text="@string/joc2opcio1"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/opcio2joc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/happymonkey_regular"
            android:text="@string/joc2opcio2"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/opcio3joc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/happymonkey_regular"
            android:text="@string/joc2opcio3"
            android:textSize="15sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>