<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fontFamily="@font/happymonkey_regular">

    <TextView
        android:id="@+id/descripcioJoc8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/joc8_1"
        android:textSize="@dimen/midaNormal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        android:paddingHorizontal="30dp"/>

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/fallosJoc7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/descripcioJoc8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fallos"
        android:textAlignment="center"
        android:textSize="@dimen/midaPetita"
        android:fontFamily="@font/happymonkey_regular"
        />

    <RadioGroup
        android:id="@+id/radioJoc8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fallosJoc7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/opcio1joc8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/happymonkey_regular"
            android:textSize="16sp"
            android:text="@string/opcio1joc8" />

        <RadioButton
            android:id="@+id/opcio2joc8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/happymonkey_regular"
            android:text="@string/opcio2joc8" />

        <RadioButton
            android:id="@+id/opcio3joc8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/happymonkey_regular"
            android:text="@string/opcio3joc8" />

        <RadioButton
            android:id="@+id/opcio4joc8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"

            android:fontFamily="@font/happymonkey_regular"
            android:text="@string/opcio3joc8" />

    </RadioGroup>




</androidx.constraintlayout.widget.ConstraintLayout>