<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fontFamily="@font/happymonkey_regular">

    <TextView
        android:id="@+id/descripciojoc4_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/joc4_1"
        android:layout_marginHorizontal="20dp"
        android:textSize="@dimen/midaNormal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        android:paddingHorizontal="30dp"
         />

    <Button
        android:id="@+id/infoJoc4"
        android:fontFamily="@font/happymonkey_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/descripciojoc4_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="Informació"
        />

    <TextView
        android:id="@+id/fallosJoc4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/happymonkey_regular"
        android:text="@string/fallos"
        android:textAlignment="center"
        android:textSize="@dimen/midaPetita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoJoc4" />

    <RadioGroup
        android:id="@+id/radioJoc4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fallosJoc4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/opcio1joc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/happymonkey_regular"
            android:text="@string/joc4opcio1" />

        <RadioButton
            android:id="@+id/opcio2joc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/happymonkey_regular"
            android:text="@string/joc4opcio2" />

        <RadioButton
            android:id="@+id/opcio3joc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/happymonkey_regular"
            android:text="@string/joc4opcio3" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>