<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_orgue"
        android:layout_marginTop="30dp"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/border_color"
        android:fontFamily="@font/happymonkey_regular"
        android:paddingHorizontal="30dp"/>

    <Button
        android:id="@+id/butonInformacioMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="312dp"
        android:fontFamily="@font/happymonkey_regular"
        android:text="@string/informacio_historica"
        app:layout_constraintTop_toBottomOf="@id/titleMenu"
        tools:layout_editor_absoluteX="49dp" />

    <Button
        android:id="@+id/butonJocMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/butonInformacioMenu"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/happymonkey_regular"
        android:text="@string/joc"
        />

    <Button
        android:id="@+id/butonPuntuacionsMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/butonJocMenu"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/happymonkey_regular"
        android:text="@string/puntuacions"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_avatar"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="376dp"
        android:padding="5dp"
        android:src="@drawable/fotoorga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:strokeColor="@android:color/darker_gray"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>