<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleInformacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/happymonkey_regular"
        android:letterSpacing="0.5"
        android:text="@string/historia"
        android:textSize="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/descripcio1Informacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/happymonkey_regular"
        android:includeFontPadding="true"
        android:letterSpacing="0.2"
        android:layout_margin="20dp"
        android:text="@string/descripcio1"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@id/titleInformacio" />

    <TextView
        android:id="@+id/descripcio2Informacio"
        android:layout_marginTop="1dp"
        android:layout_marginStart="20dp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/descripcio1Informacio"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/descripcio2"
        android:fontFamily="@font/happymonkey_regular"
        android:includeFontPadding="true"
        android:letterSpacing="0.2"
        android:textSize="17dp"
        />

    <TextView
        android:id="@+id/descripcio3Informacio"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/descripcio2Informacio"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/descripcio3"
        android:fontFamily="@font/happymonkey_regular"
        android:includeFontPadding="true"
        android:letterSpacing="0.2"
        android:textSize="17dp"
        />


    <ImageView
        android:layout_width="170dp"
        android:layout_height="245dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcio1Informacio" />

    <fragment
        android:id="@+id/botones"
        android:name="com.example.orga.Botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout="@layout/fragment_botones" />

</androidx.constraintlayout.widget.ConstraintLayout>